# telemetry-rust

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
grafana/: docker-compose.yaml
grafana/configs/: loki.yaml  otel.yaml  prometheus.yaml  pyroscope.yaml  tempo.yaml
grafana/configs/grafana/provisioning/datasources/: datasources.yaml
src/: lib.rs  logs.rs  metrics.rs  profiler.rs  tracer.rs
tests/: test_otlp.rs
