[package]
name = "telemetry-rust"
version = "0.1.1"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.28.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28.0", features = ["metrics", "trace", "logs", "rt-tokio", "tracing", "async-trait"] }
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "metrics", "logs", "serialize", "grpc-tonic"] }
opentelemetry-stdout = {version = "0.28.0", features = ["trace", "metrics", "logs"]}
opentelemetry-appender-tracing = "0.28.1"

tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes", "async-await", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["registry", "env-filter", "std", "chrono", "ansi"] }
tracing-opentelemetry = { version = "0.29.0", features = ["metrics", "tracing-log", "async-trait"] }
