[package]
name = "telemetry-rust"
version = "0.1.1"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.30.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics", "trace", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "metrics", "logs", "serialize", "grpc-tonic", "http-json"] }
opentelemetry-stdout = {version = "0.30.0", features = ["trace", "metrics", "logs"]}
opentelemetry-appender-tracing = "0.30.1"

tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes", "async-await", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["registry", "env-filter", "std", "chrono", "ansi"] }
tracing-opentelemetry = { version = "0.31.0", features = ["metrics", "tracing-log", "async-trait"] }
tokio =  {version = "1", features = ["full"]}

[dev-dependencies]
dotenvy = "0.15.7"
